--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="title"><h1>Recent Project</h1></div>
         <div>
             <div class="flipper">
-                <div class="image-container back"></div>
-                <div class="image-container">
+                <div class="image-container back"id="photoApp"></div>
+                <div class="image-container" id="photoApp">
                     <div class="img-svg">
                         <svg viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="200" height="200" rx="10" fill="white" fill-opacity="0.5" />
@@ -76,10 +76,10 @@
                 <h2><span class="bold">Jonestein Designs Portfolio</span> <br><span class="position"> Solving Problem through Designs. </span></h2>
             </div>
             <div class="flipper">
-                <div class="image-container back"></div>
-                <div class="image-container">
+                <div class="image-container back" id="portfolio-site"></div>
+                <div class="image-container" id="portfolio-site">
                     <div class="img-svg">
-                        <svg viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="line-drawer" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="200" height="200" rx="10" fill="white" fill-opacity="0.5" />
                             <mask id="mask0_0_1" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="200"
                                 height="200">
@@ -100,34 +100,48 @@
         </div>
     </section>
     <section class="projects"> 
-        <div class="title">Projects</div>
-        <div class="projects-main">
-            <div class="image-container">
+        <div class="title"><h1>Projects</h1></div>
+        <div id="networkContainer" class="projects-main">
+            <div id="circle1">
                 <img src="" alt="">
                 <div class="slider">
-                    <div class="text-container"></div>
+                    <div class="text-container hide"></div>
                 </div>
             </div>
-            <div class="image-container">
+            <div id="circle2">
                 <img src="" alt="">
                 <div class="slider">
-                    <div class="text-container"></div>
+                    <div class="text-container hide"></div>
                 </div>
             </div>
-            <div class="image-container">
+            <div id="circle3">
                 <img src="" alt="">
                 <div class="slider">
-                    <div class="text-container"></div>
+                    <div class="text-container hide"></div>
                 </div>
             </div>
-            <div class="image-container">
+            <div id="circle4">
                 <img src="" alt="">
                 <div class="slider">
-                    <div class="text-container"></div>
+                    <div class="text-container hide"></div>
                 </div>
+            </div>
+            <div id="linecontainer">
+                <svg id="line1svg">
+                </svg>
+                <svg id="line2svg">
+                </svg>
+                <svg id="line3svg">
+                </svg>
+                <svg id="line4svg">
+                </svg>
+                <svg id="line5svg">
+                </svg>
+                <svg id="line6svg">
+                </svg>
             </div>
         </div>
-        <div class="line-svg"></div>
+        
     </section>
     <footer></footer>
 
@@ -135,7 +149,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/Flip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-
+    <script src="app.js"></script>
 </body>
 
 </html> 
