Co-authored-by: swimleftproducts <swimleftproducts@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <section class="recent-project">
         <div class="title"><h1>Recent Project</h1></div>
         <div>
-            <div class="flipper">
-                <div class="image-container back"id="photoApp"></div>
-                <div class="image-container" id="photoApp">
+            <div class="flipper" id="firstFlipper">
+                <div class="image-container back" id="photoApp"></div>
+                <div class="image-container front" id="photoApp">
                     <div class="img-svg">
                         <svg viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="200" height="200" rx="10" fill="white" fill-opacity="0.5" />
@@ -75,11 +75,11 @@
             <div class="text-container">
                 <h2><span class="bold">Jonestein Designs Portfolio</span> <br><span class="position"> Solving Problem through Designs. </span></h2>
             </div>
-            <div class="flipper">
+            <div class="flipper" id="secondFlipper">
                 <div class="image-container back" id="portfolio-site"></div>
-                <div class="image-container" id="portfolio-site">
+                <div class="image-container front" id="portfolio-site">
                     <div class="img-svg">
-                        <svg class="line-drawer" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="200" height="200" rx="10" fill="white" fill-opacity="0.5" />
                             <mask id="mask0_0_1" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="200"
                                 height="200">
@@ -103,41 +103,41 @@
         <div class="title"><h1>Projects</h1></div>
         <div id="networkContainer" class="projects-main">
             <div id="circle1">
-                <img src="" alt="">
-                <div class="slider">
-                    <div class="text-container hide"></div>
+                <img src="" alt="" class="hide">
+                <div class="slider hide">
+                    <div class="text-container"></div>
                 </div>
             </div>
             <div id="circle2">
-                <img src="" alt="">
-                <div class="slider">
+                <img src="" alt="" class="hide">
+                <div class="slider hide">
                     <div class="text-container hide"></div>
                 </div>
             </div>
             <div id="circle3">
-                <img src="" alt="">
+                <img src="" alt="" class="hide">
                 <div class="slider">
                     <div class="text-container hide"></div>
                 </div>
             </div>
             <div id="circle4">
-                <img src="" alt="">
+                <img src="" alt="" class="hide">
                 <div class="slider">
                     <div class="text-container hide"></div>
                 </div>
             </div>
             <div id="linecontainer">
-                <svg id="line1svg">
+                <svg class="line-drawer" id="line1svg">
                 </svg>
-                <svg id="line2svg">
+                <svg class="line-drawer" id="line2svg">
                 </svg>
-                <svg id="line3svg">
+                <svg class="line-drawer" id="line3svg">
                 </svg>
-                <svg id="line4svg">
+                <svg class="line-drawer" id="line4svg">
                 </svg>
-                <svg id="line5svg">
+                <svg class="line-drawer" id="line5svg">
                 </svg>
-                <svg id="line6svg">
+                <svg class="line-drawer" id="line6svg">
                 </svg>
             </div>
         </div>
