fixed animation for loading

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                 </div>
                 
             </div>
-            <div class="text-container">
+            <div class="text-container" id="firstFlipperText">
                 <h2><span class="bold">Snap-A-Link App</span> <br><span class="position"> The App that connects photographers to people who need them. </span></h2>
             </div>
         </div>
         <div>
-            <div class="text-container">
+            <div class="text-container" id="secondFlipperText">
                 <h2><span class="bold">Jonestein Designs Portfolio</span> <br><span class="position"> Solving Problem through Designs. </span></h2>
             </div>
             <div class="flipper" id="secondFlipper">
@@ -146,9 +146,8 @@
     <footer></footer>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/Flip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script src="stylingFiles/gsap.min.js"></script>
+    <script src="stylingFiles/ScrollTrigger.min.js"></script>
     <script src="app.js"></script>
 </body>
 
