added other pages

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Projects</li>
+                <li><a href="index.html"> Home </a></li>
+                <li><a href="about.html"> About </a></li>
+                <li><a href="#projects"> Projects </a></li>
             </ul>
         </div>
     </nav>
@@ -99,7 +99,7 @@
             
         </div>
     </section>
-    <section class="projects"> 
+    <section class="projects" id="projects"> 
         <div class="title"><h1>Projects</h1></div>
         <div id="networkContainer" class="projects-main">
             <div id="circle1">
