--- a/jonestein-design-portfolio.html
+++ b/jonestein-design-portfolio.html
@@ -4,13 +4,25 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Mathew</title>
+        <title>Jonestein Design Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <div class="loader-container">
+    
         <div class="loader"></div>
-    </div>
+    
+    <nav>
+        <div class="logo">
+            Logo
+        </div>
+        <div class="nav-list">
+            <ul>
+                <li><a href="index.html"> Home </a></li>
+                <li><a href="about.html"> About </a></li>
+                <li><a href="#projects"> Projects </a></li>
+            </ul>
+        </div>
+    </nav>
     <script src="stylingFiles/gsap.min.js"></script>
     <script src="stylingFiles/ScrollTrigger.min.js"></script>
     <script src="app-jp.js"></script>
