--- a/index.html
+++ b/index.html
@@ -49,26 +49,11 @@
             <div class="flipper" id="firstFlipper">
                 <div class="image-container back" id="photoApp"></div>
                 <div class="image-container front" id="photoApp">
-                    <div class="img-svg">
-                        <svg viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="200" height="200" rx="10" fill="white" fill-opacity="0.5" />
-                            <mask id="mask0_0_1" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="200"
-                                height="200">
-                                <rect width="200" height="200" rx="10" fill="white" fill-opacity="0.8" />
-                                <rect width="200" height="200" rx="10" stroke="black" />
-                            </mask>
-                            <g mask="url(#mask0_0_1)">
-                                <line x1="198" y1="1.53553" x2="-0.464465" y2="200" stroke="black" stroke-width="5"
-                                    stroke-linecap="round" />
-                                <line x1="-0.464466" x2="198" y2="198.464" stroke="black" stroke-width="5" stroke-linecap="round" />
-                            </g>
-                        </svg>
-                    </div>
+                    <img src="./assets/images/logos/LinkSnap-light-white-bg.png" alt="">
                 </div>
-                
             </div>
             <div class="text-container" id="firstFlipperText">
-                <h2><span class="bold">Snap-A-Link App</span> <br><span class="position"> The App that connects photographers to people who need them. </span></h2>
+                <h2><span class="bold">LinkSnap App</span> <br><span class="position"> Connecting you to the photographer that snaps your precious moments to treasured memories. </span></h2>
             </div>
         </div>
         <div>
