--- a/photoapp/photo-app.html
+++ b/photoapp/photo-app.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jonestein Design Portfolio</title>
+    <title>LinkSnap Portfolio</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -22,18 +22,18 @@
         <div class="nav-list">
             <ul>
                 <li><a href="../index.html"> Home </a></li>
-                <li><a href="about.html"> About </a></li>
+                <li><a href="../about.html"> About </a></li>
                 <li><a href="../index.html"> Projects </a></li>
             </ul>
         </div>
     </nav>
     <section class="summary" data-barba="container" data-barba-namespace="summary">
         <div class="image-container">
-            <img src="" alt="">
+            <img src="../assets/images/logos/LinkSnap-light-white-bg.png" alt="">
         </div>
         <div class="summary-container">
             <div class="summary-text">
-                <h2 class="summary-title">Snap-A-Link App</h2>
+                <h2 class="summary-title">LinkSnap App</h2>
                 <h3 class="summary-subtitle"></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita soluta corporis cum, sint beatae
                     excepturi, sed quas magnam quibusdam animi natus.</p>
