--- a/portfolio-project/jonestein-design-portfolio.html
+++ b/portfolio-project/jonestein-design-portfolio.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Jonestein Design Portfolio</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-<body>
-    
-        <div class="loader"></div>
-    
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jonestein Design Portfolio</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body data-barba="wrapper">
+    <div class="loader"></div>
     <nav>
         <div class="logo">
             Logo
         </div>
         <div class="nav-list">
             <ul>
-                <li><a href="index.html"> Home </a></li>
-                <li><a href="about.html"> About </a></li>
-                <li><a href="#projects"> Projects </a></li>
+                <li><a href="../index.html"> Home </a></li>
+                <li><a href="../about.html"> About </a></li>
+                <li><a href="../index.html"> Projects </a></li>
             </ul>
         </div>
     </nav>
-    <script src="stylingFiles/gsap.min.js"></script>
-    <script src="stylingFiles/ScrollTrigger.min.js"></script>
+    <section class="summary" data-barba="container" data-barba-namespace="summary">
+        <div class="image-container">
+            <img src="" alt="">
+        </div>
+        <div class="summary-container">
+            <div class="summary-text">
+                <h2 class="summary-title">Snap-A-Link App</h2>
+                <h3 class="summary-subtitle"></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita soluta corporis cum, sint beatae
+                    excepturi, sed quas magnam quibusdam animi natus.</p>
+                <!-- <a href="gallery.html">
+                    <button class="summary-button">Gallery</button>
+                </a> -->
+            </div>
+            <div class="summary-arrow">
+                <a href="./goal.html">
+                    <i class="fa-solid fa-3x fa-angle-right"></i>
+                </a>
+            </div>
+        </div>
+
+
+    </section>
+
+
+    <script src="../stylingFiles/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.9.7/dist/barba.umd.min.js"></script>
     <script src="app-jp.js"></script>
 </body>
+
 </html>
