Co-authored-by: swimleftproducts <swimleftproducts@users.noreply.github.com>

--- a/photoapp/photo-app.html
+++ b/photoapp/photo-app.html
@@ -21,7 +21,7 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li><a href="../index.html"> Home </a></li>
+                <li><a id="home"> Home </a></li>
                 <li><a href="../about.html"> About </a></li>
                 <li><a href="../index.html"> Projects </a></li>
             </ul>
@@ -35,8 +35,7 @@
             <div class="summary-text">
                 <h2 class="summary-title">LinkSnap App</h2>
                 <h3 class="summary-subtitle"></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita soluta corporis cum, sint beatae
-                    excepturi, sed quas magnam quibusdam animi natus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita soluta corporis cum, sint beatae excepturi, sed quas magnam quibusdam animi natus.</p>
                 <!-- <a href="gallery.html">
                     <button class="summary-button">Gallery</button>
                 </a> -->
